Projekt/TSEIS/MSSQLdatabase.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-g9-deployment
  namespace: itonk-tseis-gr09
  labels:
    app: mssql-g9
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-g9
  template:
    metadata:
      labels:
        app: mssql-g9
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mssql-g9
        image: mcr.microsoft.com/mssql/server:2017-CU19-ubuntu-16.04
        resources:
          limits:
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 1Gi
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssql-base-volume-g9
          mountPath: /var/opt/mssql
        - name: mssql-ldf-volume-g9
          mountPath: /var/opt/mssql/ldf
        - name: mssql-mdf-volume-g9
          mountPath: /var/opt/mssql/mdf
      volumes:
      - name: mssql-base-volume-g9
        persistentVolumeClaim:
          claimName: mssql-base-volume-g9
      - name: mssql-mdf-volume-g9
        persistentVolumeClaim:
          claimName: mssql-mdf-volume-g9
      - name: mssql-ldf-volume-g9
        persistentVolumeClaim:
          claimName: mssql-ldf-volume-g9		  
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-service-g9
spec:
  selector:
    app: mssql-g9
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: LoadBalancer
