Projekt/TSEIS/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-g9
  namespace: itonk-tseis-gr09
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: itonk-tseis-gr09.dk
      http:
        paths:
          - path: /stocks/(.*)
            backend:
              serviceName: ts-service-g9
              servicePort: 6970
          - path: /mystocks/(.*)
            backend:
              serviceName: pso-service-g9
              servicePort: 6971
          - path: /buystocks/(.*)
            backend:
              serviceName: ssr-service-g9
              servicePort: 6975
          - path: /sellstock/(.*)
            backend:
              serviceName: ssp-service-g9
              servicePort: 6976
